--- a/src/pages/home/PostsStyles.css
+++ b/src/pages/home/PostsStyles.css
@@ -4,8 +4,9 @@
   gap: 20px;
   margin: 30px ;
   padding: 10px;
-  
+
 }
+
 
 .button{
   padding: 2px 15px;
@@ -33,7 +34,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 10px;
-  height: 250px;
+  height: 300px;
   background-color: cornflowerblue;
   border-radius: 4px;
   border: solid 8px blue;
@@ -47,6 +48,7 @@
   justify-content: flex-start;
   align-items: center;
   gap: 15px;
+
 }
 
 .postContainerButton{
@@ -60,10 +62,47 @@
   margin: 30px auto;
 }
 .postContainerlinha1{
-  font-size: 20px;
+  font-size: 24px;
   
 }
 .postContainerlinha2{
-  font-size: 16px;
+  font-size: 20px;
   color: red;
+}
+
+.postContainerlinha3{
+  font-size: 20px;
+}
+
+@media(max-width: 400px){
+  .Container-Pai{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    gap: 20px;
+    margin: 0px ;
+    padding: 10px;
+  }
+  .postContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px;
+    background-color: cornflowerblue;
+    border-radius: 4px;
+    border: solid 8px blue;
+    box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.75);
+    opacity: 0.80;
+  }
+  .postContainerlinha1{
+    font-size: 20px;
+    
+  }
+  .postContainerlinha2{
+    font-size: 16px;
+    color: red;
+  }
+  
+  .postContainerlinha3{
+    font-size: 16px;
+  }
 }
