--- a/src/pages/userDescription/userDescripition.css
+++ b/src/pages/userDescription/userDescripition.css
@@ -6,12 +6,10 @@
 }
 .ContainerDetalhes {
   display: grid;
-  
   gap: 10px;
   padding: 10px;
   margin: 30px auto 0px;
   height: 500px;
-  
   background-color: cornflowerblue;
   border-radius: 4px;
   border: solid 8px blue;
@@ -24,4 +22,9 @@
   font-size: 18px;
   font-weight: bold;
   color: black;
+}
+@media (max-width:400px){
+  .ContainerDetalhes{
+    width: 320px;
+  }
 }
